--- a/server/package.json
+++ b/server/package.json
@@ -16,10 +16,12 @@
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "fs": "^0.0.1-security",
+    "gridfs-stream": "^1.1.1",
     "jsonschema": "^1.4.1",
     "jsonwebtoken": "^8.5.1",
+    "method-override": "^3.0.0",
     "mongodb": "^4.9.1",
-    "mongoose": "^6.6.0",
+    "mongoose": "^6.6.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
     "multer-gridfs-storage": "^5.0.2",
